--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,7 +4,7 @@ name: run main.py
 
 on:
   schedule:
-    - cron: "*/1 * * * *" # At 1 min
+    - cron: '1 * * * *' # At 1 min
 
 jobs:
   build:
@@ -19,6 +19,11 @@ jobs:
         with:
           python-version: '3.9' # install the python version needed
           
+      - name: install python packages
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          
       - name: execute py script # run main.py
         env:
           SOME_SECRET: ${{ secrets.SOME_SECRET }}
@@ -27,12 +32,12 @@ jobs:
       - name: commit files
         run: |
           git config --local user.email "imhimansu28@gmail.com"
-          git config --local user.name "imhimansu28"
+          git config --local user.name "GitHub Action"
           git add -A
           git diff-index --quiet HEAD || (git commit -a -m "updated logs" --allow-empty)
           
       - name: push changes
         uses: ad-m/github-push-action@v0.6.0
         with:
-          github_token: ${{ secrets.TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: main
