--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,8 +3,11 @@
 name: run main.py
 
 on:
+  push:
+    branches:
+      - main
   schedule:
-    - cron: '0 0 * * 1' # At 1 min
+    - cron: '0 0 * * 1' # At 00:00 on Monday
 
 jobs:
   build:
@@ -31,7 +34,7 @@ jobs:
           
       - name: commit files
         run: |
-          git config --local user.email "imhimansu28@gmail.com"
+          git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add -A
           git diff-index --quiet HEAD || (git commit -a -m "updated logs" --allow-empty)
@@ -39,5 +42,5 @@ jobs:
       - name: push changes
         uses: ad-m/github-push-action@v0.6.0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.TOKEN }}
           branch: main
